// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select matches snapshot: enzyme.mount 1`] = `
<Select
  errorText={null}
  input={Object {}}
  label="example"
  meta={Object {}}
>
  <glamorous(label)>
    <label
      className="css-wd82g1"
    >
      <glamorous(span)>
        <span
          className="css-1m1nyko"
        >
          example
        </span>
      </glamorous(span)>
      <glamorous(select)>
        <select
          className="css-61wx1h"
        >
          example
        </select>
      </glamorous(select)>
    </label>
  </glamorous(label)>
</Select>
`;

exports[`Select matches snapshot: enzyme.render 1`] = `
<label
  class="css-wd82g1"
>
  <span
    class="css-1m1nyko"
  >
    example
  </span>
  <select
    class="css-61wx1h"
  >
    example
  </select>
</label>
`;

exports[`Select matches snapshot: enzyme.shallow 1`] = `
<glamorous(label)>
  <glamorous(span)>
    example
  </glamorous(span)>
  <glamorous(select)>
    example
  </glamorous(select)>
</glamorous(label)>
`;
